v.2.1.0~alpha1
- created upgrade routine to rename hashed artist and image names
- updated AS to save and use unhashed artist and image names
- cleaned up folder path creation routines

v.2.0.8
- fix for crash if Kodi plugin tries to load bio with oddly encoded characters
- fix for crash if a services cache file contains a string that doesn't evaluate to int

v.2.0.7
- added last.fm bio file as option for finding Musicbrainz ID
- moved all Musicbrainz ID functions into plugins
- fix so featured artist parsing from song name is case insensitive
- strip errant linefeed from readfile on musicbrainz.nfo (where manually created)

v.2.0.6
- removed some logging causing a unicode problem
- fix for crash when no valid JSON returned from theaudiodb.com

v.2.0.5
- reverted to old logic for checking for start of new artist (more reliable)
- fix for creation of empty artist folders when using fanart.jpg option

v.2.0.4
- added option to use local fanart and folder image outside extrafanart folder
- added MusicBrainz ID extraction from theaudiodb.com information
- added ArtistSlideshow.SimilarCount and ArtistSlideshow.AlbumCount to skin properties
- fix for theaudiodb lookup when artists have ampersands in their name
- fix for artist name separation leaving extra spaces

v.2.0.3
- removed support for htbackdrops.org (API access no longer available)
- fix for crash when theaudiodb.com doesn't respond with valid JSON

v.2.0.2
- fixed crash when using fuzzy local path with non-Windows option
- updated German strings

v.2.0.1
- added option for fuzzy local path search replacing illegal path characters
- added option to search theaudiodb.com using artist name if mbid unavailable
- fixed issue when merging separate artist images with same file name
- added option to turn off featured or multi-artist image merge
- fixed crash if htbackdrops or last.fm are unresponsive

v.2.0.0
- separated code for downloads into modules to make it easier to add other services