@@ -10,6 +10,7 @@
     <category label="32100">
         <setting id="local_artist_path" type="folder" label="32101" default="" />
         <setting id="priority" type="enum" label="32102" lvalues="32110|32111|32112" default="0" />
+        <setting id="localstorageonly" type="bool" label="32113" default="false" />
 		<setting id="include_fanartjpg" type="bool" label="32108" default="false" />
 		<setting id="include_folderjpg" type="bool" label="32109" default="false" />
         <setting id="fallback" type="bool" label="32105" default="false" />
