@@ -1,5 +1,6 @@
 v.2.1.0~alpha1
 - created upgrade routine to rename hashed artist and image names
+- included new option to ONLY use local artist path for storage
 - updated AS to save and use unhashed artist and image names
 - cleaned up folder path creation routines
 
